--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,71 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0px 0px 2px #ccc;
-  margin-top: 2rem !important;
+  margin-top: 0.75rem !important;
+  padding-bottom: 2%;
 }
 .display-7 {
-  font-size: calc(0.375rem + 1.5vw);
-  font-weight: 300;
+  font-size: calc(0.675rem + 1.5vw);
+  font-weight: 600;
   line-height: 1.2;
 }
-.col-3.simple-level-operations .d-flex.flex-wrap{
+.col-3.simple-level-operations .d-flex.flex-wrap {
   flex-direction: column;
 }
-.simple-level-operations{
+.simple-level-operations {
   display: flex;
   justify-content: center;
+}
+.col-12.m-level-operations .text-center {
+  border: 1px solid #ccc;
+  height: 7.5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15%;
+}
+.d-flex.flex-wrap{
+  justify-content: space-between;
+}
+.col-12.second-level-operations .text-center {
+  border: 1px solid #ccc;
+  height: 9.5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width:24% ;
+  margin-top: 5px;
+}
+.col-12.digit-level-operations.d-flex .col-9 .text-center{
+  border: 1px solid #ccc;
+  height: 11.5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width:32% ;
+  margin-top: 5px;
+}
+.col-3.simple-level-operations .text-center{
+  border: 1px solid #ccc;
+  height: 11.5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5px;
+}
+.col-3.simple-level-operations .d-flex.flex-wrap{
+  width: 96%;
+  margin-left: 4%;
+}
+.all-operations .text-center:hover {
+  background-color: rgba(0, 0, 0, 0.878);
+  cursor: pointer;
+  color: #fff;
+ }
+
+.all-operations .text-center, .all-operations .text-center:hover {
+  border-radius: 0.25rem;
+}
+.current-value-block.text-end {
+  margin: 1rem 0;
 }
